--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -193,7 +193,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText5"
+        android:id="@+id/authorBookId"
         android:layout_width="208dp"
         android:layout_height="43dp"
         android:layout_marginEnd="32dp"
@@ -219,7 +219,7 @@
         android:textColorHint="#FFFFFF"
         android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditText5" />
+        app:layout_constraintTop_toBottomOf="@+id/authorBookId" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/startBookPage_textview"
