--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -228,7 +228,7 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="#FFFFFF"
         android:hint="מעמוד"
-        android:numeric="integer"
+        android:inputType="number"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -242,7 +242,7 @@
         android:layout_height="43dp"
         android:backgroundTint="#FFFFFF"
         android:hint="עד עמוד"
-        android:numeric="integer"
+        android:inputType="number"
         android:textColor="#FFFFFF"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
