--- a/app/src/main/res/layout/profile_screen.xml
+++ b/app/src/main/res/layout/profile_screen.xml
@@ -79,42 +79,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PersonalDetails" />
 
+
     <ScrollView
-        android:id="@+id/profile_scrollView"
-        android:layout_width="409dp"
+        android:layout_width="408dp"
         android:layout_height="190dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="2"
         app:layout_constraintStart_toStartOf="parent">
 
-        <HorizontalScrollView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent">>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <ListView
+                android:id="@+id/list_profile"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true" />
 
-<!--                <ListView-->
-<!--                    android:id="@+id/list_profile"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_alignParentLeft="true"-->
-<!--                    android:layout_alignParentTop="true" />-->
 
-                <view class="androidx.appcompat.app.AlertController$RecycleListView"
-                    android:id="@+id/list_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"></view>
-                            </LinearLayout>
-                        </HorizontalScrollView>
-                    </ScrollView>
+        </LinearLayout>
+    </ScrollView>
 
-                    <ImageView
+    <ImageView
                         android:id="@+id/imageView3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
